[package]
name = "stress"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
indicatif = "0.17"
argh = "0.1.9"
url = "2.3.1"
serde = "1"
serde_json = "1"
statistical = "1"
time = { version = "0.3.16", features = ["formatting"] } 
